--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --color-pastel-cream: #FDFD96;
   --color-pastel-mint: #B2F7EF;
   --color-pastel-peach: #FFDAC1;
+  --color-pastel-red: #FFB7B2;
 
   --font-sans: Inter, sans-serif;
 
